src/components/common/Header/Header.module.scss
.header {
	width: 100%;
	background-color: $ig-primary-background;
	border-bottom: 1px solid $ig-elevated-separator;
	position: fixed;
	top: 0px;
	z-index: 999999999;

	&__container {
		@include grid-wide;
		@include flex-center-between;
		height: 60px;
	}

	&__containerlogo {
		img {
			height: 100%;
			width: 120px;
		}
	}

	&__containernav {
		ul {
			@include flex-center-center;
			gap: 25px;
			li {
				color: black;

				.active {
					font-size: '22px';
				}
			}
		}
	}
}

.menu {
	min-width: 250px;
	padding: 0px;
	border-radius: 5px;
	overflow: hidden;

	li {
		padding: 10px 20px;
		font-size: 16px;

		a {
			@include flex-start-center;
			gap: 10px;
		}

		&:last-child {
			border-top: 1px solid rgb(219, 219, 219);
		}
	}
}

